examples/test/testpolicy14323.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14323
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key7: value49
      key33: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value40
      podSelector:
        matchLabels:
          key37: value24
          key24: value44
